# find-duplicate-files

./: LICENSE  Makefile  README.md  find_duplicate_files  find_duplicate_files.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pythonapp.yml
metrics/: performance.py
tests/: generate_test_directory.py  run.py  test_command_line.py  test_find_duplicate_files.py  test_find_duplicate_files_by_hash.py  test_generate_hash.py  test_symlink_directory.py
tests/test_data/TestFindDuplicateFilesByHash/: 2.txt  5.txt
